[gd_scene load_steps=16 format=3 uid="uid://c5jgoujkbrge5"]

[ext_resource type="Script" uid="uid://cn07ofvgbk2n7" path="res://src/ui/account_management/authentication/authenticate.gd" id="1_opvkw"]
[ext_resource type="FontFile" uid="uid://d01bkxkrxln5h" path="res://src/ui/fonts/boogaloo/Boogaloo-Regular.ttf" id="2_mu1cn"]
[ext_resource type="PackedScene" uid="uid://tckwwg0vm5q5" path="res://src/world/overworld_map/overworld_map.tscn" id="2_pkhyw"]
[ext_resource type="Texture2D" uid="uid://bs23pnesr5w0g" path="res://src/ui/icons/settings.png" id="4_nj3ry"]
[ext_resource type="Texture2D" uid="uid://bkami5w56ym1j" path="res://src/ui/icons/info.png" id="5_da5bx"]
[ext_resource type="Script" uid="uid://bgjhdlab3gs20" path="res://src/ui/account_management/authentication/subscenes/subscene_ready.gd" id="6_38663"]
[ext_resource type="Script" uid="uid://dlv5ihl445djb" path="res://src/ui/account_management/authentication/subscenes/subscene_signup.gd" id="7_788ow"]
[ext_resource type="Script" uid="uid://b72e1pupcfl5c" path="res://src/ui/account_management/authentication/subscenes/subscene_login.gd" id="7_gx5o2"]
[ext_resource type="Texture2D" uid="uid://bmf6hkoeipse" path="res://src/ui/icons/visibility_off.png" id="8_quimm"]
[ext_resource type="Script" uid="uid://dt3x53uwpyieg" path="res://src/ui/account_management/authentication/subscenes/subscene_tryout.gd" id="8_wywil"]
[ext_resource type="Script" uid="uid://jqyqcrsa5i14" path="res://src/ui/account_management/authentication/subscenes/subscene_verify.gd" id="10_e1103"]
[ext_resource type="Script" uid="uid://bbhf8y5mdv060" path="res://src/ui/account_management/authentication/subscenes/subscene_fresh.gd" id="11_t8f23"]
[ext_resource type="Script" uid="uid://ctgl7ertvatkf" path="res://src/ui/account_management/authentication/subscenes/subscene_notice.gd" id="12_3oyf3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jicmd"]
bg_color = Color(0, 0.568018, 0.919692, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p47u1"]

[node name="LoginAnonymous" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jicmd")
script = ExtResource("1_opvkw")
next_scene = ExtResource("2_pkhyw")
subscenes = {
"fresh": NodePath("Subscenes/Fresh"),
"login": NodePath("Subscenes/Login"),
"notice": NodePath("Subscenes/Notice"),
"ready": NodePath("Subscenes/Ready"),
"signup": NodePath("Subscenes/Signup"),
"tryout": NodePath("Subscenes/Tryout"),
"verify": NodePath("Subscenes/Verify")
}
metadata/_edit_lock_ = true

[node name="GameName" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 124.0
offset_bottom = 366.0
grow_horizontal = 2
size_flags_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_mu1cn")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[center][wave freq=4]BLIMP JOURNEY"
fit_content = true

[node name="MessageLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
offset_bottom = -157.667
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TechInfo" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="VersionLabel" type="Label" parent="MarginContainer/TechInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "v1.0.0"

[node name="UIDLabel" type="Label" parent="MarginContainer/TechInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "UID: Not logged in"

[node name="Options" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/Options"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_nj3ry")
ignore_texture_size = true
stretch_mode = 5

[node name="InfoButton" type="TextureButton" parent="MarginContainer/Options"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5_da5bx")
ignore_texture_size = true
stretch_mode = 5

[node name="Subscenes" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ready" type="VBoxContainer" parent="Subscenes"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -94.0
offset_right = 198.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_38663")

[node name="PlayButton" type="Button" parent="Subscenes/Ready"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Play Now!"

[node name="LogoutButton" type="Button" parent="Subscenes/Ready"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Logout"

[node name="Login" type="VBoxContainer" parent="Subscenes"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -102.0
offset_right = 173.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_gx5o2")

[node name="EmailLineEdit" type="LineEdit" parent="Subscenes/Login"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Email"
caret_blink = true

[node name="PasswordLineEdit" type="LineEdit" parent="Subscenes/Login"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Password"
max_length = 128
caret_blink = true
secret = true

[node name="TogglePasswordVisibilityButton" type="TextureButton" parent="Subscenes/Login/PasswordLineEdit"]
texture_filter = 4
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("8_quimm")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Subscenes/Login"]
layout_mode = 2

[node name="TrustDeviceLabel" type="Label" parent="Subscenes/Login/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Login automatically next time"

[node name="CheckBox" type="CheckBox" parent="Subscenes/Login/HBoxContainer"]
layout_mode = 2
focus_mode = 0

[node name="LoginButton" type="Button" parent="Subscenes/Login"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
disabled = true
text = "Login"

[node name="MessageLabel" type="Label" parent="Subscenes/Login"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Subscenes/Login"]
layout_mode = 2

[node name="SignUpButton" type="Button" parent="Subscenes/Login"]
layout_mode = 2
focus_mode = 0
text = "Create a new account"
flat = true

[node name="Signup" type="VBoxContainer" parent="Subscenes"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -102.0
offset_right = 173.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_788ow")

[node name="EmailLineEdit" type="LineEdit" parent="Subscenes/Signup"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Email"
caret_blink = true

[node name="PasswordLineEdit" type="LineEdit" parent="Subscenes/Signup"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Password"
max_length = 128
caret_blink = true
secret = true

[node name="TogglePasswordVisibilityButton" type="TextureButton" parent="Subscenes/Signup/PasswordLineEdit"]
texture_filter = 4
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("8_quimm")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Subscenes/Signup"]
layout_mode = 2

[node name="TrustDeviceLabel" type="Label" parent="Subscenes/Signup/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Login automatically next time"

[node name="CheckBox" type="CheckBox" parent="Subscenes/Signup/HBoxContainer"]
layout_mode = 2
focus_mode = 0

[node name="SignUpButton" type="Button" parent="Subscenes/Signup"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
disabled = true
text = "Sign Up"

[node name="MessageLabel" type="Label" parent="Subscenes/Signup"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Subscenes/Signup"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="Subscenes/Signup"]
layout_mode = 2
focus_mode = 0
text = "Login with existing account"
flat = true

[node name="Tryout" type="Control" parent="Subscenes"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_wywil")

[node name="Verify" type="PanelContainer" parent="Subscenes"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -137.0
offset_right = 231.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_e1103")

[node name="MarginContainer" type="MarginContainer" parent="Subscenes/Verify"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Subscenes/Verify/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="Subscenes/Verify/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Verify your email address"
horizontal_alignment = 1

[node name="BodyLabel" type="Label" parent="Subscenes/Verify/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "Please confirm that you want to use this as your Blimp Journey email address, then click the button."
horizontal_alignment = 1
autowrap_mode = 3

[node name="EmailLabel" type="Label" parent="Subscenes/Verify/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Subscenes/Verify/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ResendButton" type="Button" parent="Subscenes/Verify/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Resend"

[node name="ConfirmationButton" type="Button" parent="Subscenes/Verify/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
focus_mode = 0
text = "I have verified my email address"

[node name="HSeparator" type="HSeparator" parent="Subscenes/Verify/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Subscenes/Verify/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Go back"
flat = true

[node name="Fresh" type="VBoxContainer" parent="Subscenes"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -94.0
offset_right = 198.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_t8f23")

[node name="TryButton" type="Button" parent="Subscenes/Fresh"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Try it out!"

[node name="LoginButton" type="Button" parent="Subscenes/Fresh"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Login"

[node name="SignUpButton" type="Button" parent="Subscenes/Fresh"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Sign Up"

[node name="Notice" type="PanelContainer" parent="Subscenes" node_paths=PackedStringArray("labels")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -132.0
offset_right = 231.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_3oyf3")
labels = [NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/BodyLabel")]

[node name="MarginContainer" type="MarginContainer" parent="Subscenes/Notice"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Subscenes/Notice/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Subscenes/Notice/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "NOTICE"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Subscenes/Notice/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Subscenes/Notice/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BodyLabel" type="RichTextLabel" parent="Subscenes/Notice/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
bbcode_enabled = true
text = "• Please share your feedback and report bugs on the [url=\"https://discord.gg/gJnMdHZPgh\"]Blimp Journey Discord server[/url]"
fit_content = true

[node name="PanelContainer2" type="PanelContainer" parent="Subscenes/Notice/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Subscenes/Notice/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BodyLabel" type="RichTextLabel" parent="Subscenes/Notice/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
bbcode_enabled = true
text = "• All aspects of this game are subject to change"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="Subscenes/Notice/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_p47u1")

[node name="ContinueButton" type="Button" parent="Subscenes/Notice/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Continue"
